lc practice